...
        <item>Small Group</item>
        <item>Crowd</item>
    </string-array>

    <string name="mood_neutral">Neutral</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_angry">Angry</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_disgusted">Disgusted</string>
    <string name="mood_scared">Scared</string>
    <string name="mood_surprised">Surprised</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_logging_in">Signing In…</string>
    <string name="login_sign_up">Sign Up</string>
...
