<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="Your Profile"
        android:textAppearance="@style/drop_shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_out_button"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:text="@string/log_out_button"
        android:textAllCaps="false"
        android:textColor="@drawable/button_pressed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/user_profile"
        app:layout_constraintTop_toBottomOf="@+id/user_profile">


        <TextView
            android:id="@+id/usernameView"
            style="@style/InputButtonText"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:background="@drawable/input_button_white"
            android:gravity="center"
            android:text="@string/user_name_button" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/WhiteText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/usernameView"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="83dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@+id/usernameView"
            android:background="@drawable/button_right_long"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="@integer/max_name_length"
            android:maxLines="1"
            android:textSize="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/birthDateLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/user_profile"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout">


        <TextView
            android:id="@+id/birthText"
            style="@style/InputButtonText"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:background="@drawable/input_button_white"
            android:gravity="center"
            android:text="@string/birth_date_button_text" />

        <EditText
            android:id="@+id/birthEditText"
            style="@style/WhiteText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/birthText"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="83dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@+id/birthText"
            android:background="@drawable/button_right_long"
            android:clickable="true"
            android:ems="10"
            android:gravity="center"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1"
            android:textSize="15dp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/bioEditText"
        style="@style/WhiteText"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/translucent_box"
        android:ems="10"
        android:gravity="start|top"
        android:hint="About you"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:padding="10dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/birthDateLayout"
        app:layout_constraintStart_toStartOf="@+id/birthDateLayout"
        app:layout_constraintTop_toBottomOf="@+id/birthDateLayout" />

    <TextView
        android:id="@+id/maxLengthTextView"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/max_char_text"
        app:layout_constraintEnd_toEndOf="@+id/bioEditText"
        app:layout_constraintTop_toBottomOf="@+id/bioEditText" />

    <Button
        android:id="@+id/done_button"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="@dimen/navBar_distance"
        android:background="@android:color/transparent"
        android:text="@string/add_post_done_button"
        android:textAllCaps="false"
        android:textColor="@drawable/button_pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/navBar_distance"
        android:background="@android:color/transparent"
        android:text="@string/add_post_cancel_button"
        android:textAllCaps="false"
        android:textColor="@drawable/button_pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>